made function for fixing overflow

--- a/sass_css.css
+++ b/sass_css.css
@@ -11,29 +11,39 @@
   font-style: normal;
 }
 html {
-  height: 100%;
   font-size: 16px;
+  background-color: rgb(255, 170, 170);
+  background: border-box linear-gradient(180deg, rgb(255, 170, 170), rgb(212, 106, 106), rgb(170, 57, 57)) 100% 100%;
+}
+
+.b-html__vh100 {
+  height: 100vh;
+}
+
+.b-html__vh140 {
+  height: 140vh;
 }
 
 .b-page {
   box-sizing: border-box;
   font-size: 16px;
-  background-color: rgb(255, 170, 170);
-  background: linear-gradient(180deg, rgb(255, 170, 170), rgb(212, 106, 106), rgb(170, 57, 57));
   font-family: "Amiko", sans-serif;
   width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   margin: 0 auto;
   padding: 0;
 }
 
 .b-title {
-  font-size: 2.25rem;
+  font-size: 36px;
   font-weight: 700;
   letter-spacing: -2px;
   color: rgb(128, 21, 21);
   text-align: center;
-  margin-top: 3rem;
-  margin-bottom: 1.5rem;
+  margin-top: 48px;
+  margin-bottom: 24px;
 }
 
 .b-form {
@@ -41,10 +51,10 @@ html {
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
-  font-size: 1.3rem;
-  line-height: 1.5rem;
+  font-size: 20.8px;
+  line-height: 24px;
   background-color: rgb(170, 57, 57);
-  margin: 0 auto;
+  margin: 0 auto 24px;
   max-width: 450px;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -68,6 +78,7 @@ html {
   flex: 2;
   background-color: rgb(212, 106, 106);
   color: rgb(85, 0, 0);
+  caret-color: rgb(85, 0, 0);
   font-size: inherit;
   margin: 0.5rem;
   padding: 0.5rem;
@@ -90,16 +101,17 @@ html {
 
 .b-btn {
   flex: 1;
-  font-size: 1.5rem;
+  font-size: 24px;
   background-color: rgb(128, 21, 21);
   color: rgb(255, 170, 170);
-  height: 3rem;
+  height: 48px;
   border-radius: 1rem;
   border: none;
-  padding: 1rem;
-  margin: 1rem 0.5rem 0.5rem;
+  padding: 1rem 0.5rem;
+  margin: 1rem 0;
   width: 100%;
   cursor: pointer;
+  outline: none;
 }
 
 .b-weight__input:focus,
@@ -110,7 +122,8 @@ html {
 
 .b-weight__input:hover,
 .b-height__input:hover,
-.b-btn:hover {
+.b-btn:hover,
+.b-btn:focus {
   filter: drop-shadow(0 0 0.444rem rgb(85, 0, 0));
   outline: none;
 }
@@ -123,8 +136,7 @@ html {
 
 p {
   flex: 1;
-  font-size: 1rem;
-  margin-left: 0.5rem;
+  font-size: 16px;
   padding: 0.5rem;
   border: none;
   color: rgb(255, 170, 170);
@@ -136,10 +148,25 @@ p {
 }
 
 @media screen and (max-width: 600px) {
-  html {
-    font-size: 12px;
+  .b-title {
+    font-size: 32px;
+    margin-top: 32px;
+    margin-bottom: 16px;
   }
   .b-form {
+    font-size: 16px;
+    padding: 1rem;
     max-width: 65%;
+  }
+}
+@media screen and (orientation: landscape) and (max-height: 450px) {
+  .b-title {
+    font-size: 32px;
+    margin-top: 32px;
+    margin-bottom: 16px;
+  }
+  .b-form {
+    font-size: 16px;
+    padding: 1rem;
   }
 }/*# sourceMappingURL=sass_css.css.map */
